--- a/PhoneDB.ipynb
+++ b/PhoneDB.ipynb
@@ -16,22 +16,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\RenzCute\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\bs4\\builder\\__init__.py:545: XMLParsedAsHTMLWarning: It looks like you're parsing an XML document using an HTML parser. If this really is an HTML document (maybe it's XHTML?), you can ignore or filter this warning. If it's XML, you should know that using an XML parser will be more reliable. To parse this document as XML, make sure you have the lxml package installed, and pass the keyword argument `features=\"xml\"` into the BeautifulSoup constructor.\n",
-      "  warnings.warn(\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "There are 9997 devices to scrape\n"
+      "There are 10078 devices to scrape\n"
      ]
     }
    ],
@@ -43,7 +35,7 @@
     "#get the xml file from the sitemap\n",
     "\n",
     "sitemap = rq.get(device_list)\n",
-    "soup = bs4.BeautifulSoup(sitemap.text, \"lxml\")\n",
+    "soup = bs4.BeautifulSoup(sitemap.text, \"xml\")\n",
     "# get only devices from the sitemap which is 2017-12-30T22:10:18+01:00 and newer using the lastmod tag\n",
     "\n",
     "locs = []\n",
@@ -59,6 +51,35 @@
     "locs.pop(0)\n",
     "\n",
     "print(\"There are \" + str(len(locs)) + \" devices to scrape\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(\\b(?:Samsung.*?Galaxy.*?s23)\\b)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "search_text = \"Samsung Galaxy s23\"\n",
+    "pattern = rf\"(\\b(?:{search_text.replace(' ', '.*?')})\\b)\"\n",
+    "texts = [\n",
+    "    \"samsung_sm-s918q_galaxy_s23_ultra_5g_uw_premium_edition_td-lte_jp_1tb__samsung_diamond_dm3\",\n",
+    "    \"samsung_sm-s918n_galaxy_s23_ultra_5g_uw_bmw_m_edition_td-lte_kr_512gb__samsung_diamond_dm3\",\n",
+    "    \"samsung_sm-a145mds_galaxy_a14_4g_2023_standard_edition_td-lte_latam_128gb__samsung_a145\"\n",
+    "]\n",
+    "\n",
+    "for text in texts:\n",
+    "    if match := re.search(pattern, text, re.IGNORECASE):\n",
+    "        print(match.group(0))\n"
    ]
   },
   {
@@ -253,7 +274,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
