--- a/PhoneDB.ipynb
+++ b/PhoneDB.ipynb
@@ -55,26 +55,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(\\b(?:Samsung.*?Galaxy.*?s23)\\b)\n"
+      "(?:Samsung.*?Galaxy)\n",
+      "samsung_sm-s918q_galaxy\n",
+      "samsung_sm-s918n_galaxy\n",
+      "samsung_sm-a145mds_galaxy\n"
      ]
     }
    ],
    "source": [
     "import re\n",
     "\n",
-    "search_text = \"Samsung Galaxy s23\"\n",
-    "pattern = rf\"(\\b(?:{search_text.replace(' ', '.*?')})\\b)\"\n",
+    "search_text = \"Samsung Galaxy\"\n",
+    "pattern = rf\"(?:{search_text.replace(' ', '.*?')})\"\n",
+    "print(pattern)\n",
     "texts = [\n",
     "    \"samsung_sm-s918q_galaxy_s23_ultra_5g_uw_premium_edition_td-lte_jp_1tb__samsung_diamond_dm3\",\n",
     "    \"samsung_sm-s918n_galaxy_s23_ultra_5g_uw_bmw_m_edition_td-lte_kr_512gb__samsung_diamond_dm3\",\n",
-    "    \"samsung_sm-a145mds_galaxy_a14_4g_2023_standard_edition_td-lte_latam_128gb__samsung_a145\"\n",
+    "    \"samsung_sm-a145mds_galaxy_a14_4g_2023_standard_edition_td-lte_latam_128gb__samsung_a145\",\n",
+    "    \"asus_rog_phone_6d_5g_batman_edition_dual_sim_td-lte_cn_version_b_256gb_ai2203__asus_i2203a\"\n",
     "]\n",
     "\n",
     "for text in texts:\n",
@@ -274,7 +279,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "0.0.0"
   }
  },
  "nbformat": 4,
