--- a/manual_lazada.ipynb
+++ b/manual_lazada.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -14,21 +14,6 @@
       "Requirement already satisfied: beautifulsoup4 in c:\\users\\renzcute\\anaconda3\\lib\\site-packages (4.12.2)\n",
       "Requirement already satisfied: soupsieve>1.2 in c:\\users\\renzcute\\anaconda3\\lib\\site-packages (from beautifulsoup4) (2.4)\n",
       "Note: you may need to restart the kernel to use updated packages.\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ERROR: Could not find a version that satisfies the requirement json (from versions: none)\n",
-      "ERROR: No matching distribution found for json\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "Requirement already satisfied: urllib3 in c:\\users\\renzcute\\anaconda3\\lib\\site-packages (1.26.16)\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
@@ -42,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -50,8 +35,8 @@
      "output_type": "stream",
      "text": [
       "Processing Lazada entries...\n",
-      "URL: https://www.lazada.com.ph/shop-mobiles/?ajax=true&q=Galaxy%20s24&service=official\n",
-      "[INFO]: Phone Galaxy s24 in Lazada.\n"
+      "URL: https://www.lazada.com.ph/shop-mobiles/?ajax=true&q=Asus%20Zenfone%209&service=official\n",
+      "[INFO]: Phone Asus Zenfone 9 in Lazada.\n"
      ]
     }
    ],
@@ -75,6 +60,15 @@
     "json_laz = json_repair.loads(input(\"Lazada Json: \"))\n",
     "\n",
     "item = json_laz['mods']['listItems'][0]\n",
+    "data_out = None\n",
+    "\n",
+    "# check if file present\n",
+    "if not os.path.isfile('lazada_out.json'):\n",
+    "    with open('lazada_out.json', 'w') as file:\n",
+    "        json.dump({}, file)\n",
+    "\n",
+    "with open('lazada_out.json', 'r') as file:\n",
+    "    data_out = json_repair.loads(file.read())\n",
     "if any([word.lower() in json_laz['mods']['listItems'][0]['name'].lower() for word in cur_phone.split()]):\n",
     "    \n",
     "    if item.get('price') is None:\n",
@@ -88,14 +82,6 @@
     "    if item.get('itemUrl') is None:\n",
     "        item['itemUrl'] = 'Unknown'\n",
     "\n",
-    "    data_out = None\n",
-    "    # check if file present\n",
-    "    if not os.path.isfile('lazada_out.json'):\n",
-    "        with open('lazada_out.json', 'w') as file:\n",
-    "            json.dump({}, file)\n",
-    "\n",
-    "    with open('lazada_out.json', 'r') as file:\n",
-    "        data_out = json_repair.loads(file.read())\n",
     "\n",
     "    if data_out is None:\n",
     "        data_out =  {\n",
@@ -122,6 +108,7 @@
     "\n",
     "    print(f'[INFO]: Phone {cur_phone} in Lazada.')\n",
     "else:\n",
+    "    data_out[cur_phone] = {}\n",
     "    print(f'[INFO]: Phone {cur_phone} not in Lazada.')\n",
     "\n"
    ]
