--- a/manual_lazada.ipynb
+++ b/manual_lazada.ipynb
@@ -102,15 +102,16 @@
     "            'Price': item['price'], \n",
     "            'Original Price': item['originalPrice']\n",
     "            }\n",
-    "    \n",
-    "    with open('lazada_out.json', 'w') as file:\n",
-    "        json.dump(data_out, file, indent=1)\n",
     "\n",
     "    print(f'[INFO]: Phone {cur_phone} in Lazada.')\n",
     "else:\n",
     "    data_out[cur_phone] = {}\n",
     "    print(f'[INFO]: Phone {cur_phone} not in Lazada.')\n",
-    "\n"
+    "\n",
+    "\n",
+    "\n",
+    "with open('lazada_out.json', 'w') as file:\n",
+    "    json.dump(data_out, file, indent=1)"
    ]
   }
  ],
