--- a/manual_lazada.ipynb
+++ b/manual_lazada.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -35,8 +35,21 @@
      "output_type": "stream",
      "text": [
       "Processing Lazada entries...\n",
-      "URL: https://www.lazada.com.ph/shop-mobiles/?ajax=true&q=Asus%20Zenfone%209&service=official\n",
-      "[INFO]: Phone Asus Zenfone 9 in Lazada.\n"
+      "URL: https://www.lazada.com.ph/shop-mobiles/?ajax=true&q=Allview%20V4%20Viper&service=official\n",
+      "[INFO]: Phone Allview V4 Viper not in Lazada.\n",
+      "Processing Lazada entries...\n",
+      "URL: https://www.lazada.com.ph/shop-mobiles/?ajax=true&q=vivo%20iQOO%205%20Pro%205G&service=official\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "string indices must be integers, not 'str'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[44], line 341\u001b[0m\n\u001b[0;32m    338\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlazada_out.json\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m file:\n\u001b[0;32m    339\u001b[0m     data_out \u001b[38;5;241m=\u001b[39m json_repair\u001b[38;5;241m.\u001b[39mloads(file\u001b[38;5;241m.\u001b[39mread())\n\u001b[1;32m--> 341\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(json_laz[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmods\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlistItems\u001b[39m\u001b[38;5;124m'\u001b[39m]):\n\u001b[0;32m    342\u001b[0m     item \u001b[38;5;241m=\u001b[39m json_laz[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmods\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlistItems\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;241m0\u001b[39m]\n\u001b[0;32m    343\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mall\u001b[39m([word\u001b[38;5;241m.\u001b[39mlower() \u001b[38;5;129;01min\u001b[39;00m json_laz[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmods\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlistItems\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;241m0\u001b[39m][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mname\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mlower() \u001b[38;5;28;01mfor\u001b[39;00m word \u001b[38;5;129;01min\u001b[39;00m cur_phone\u001b[38;5;241m.\u001b[39msplit()]):\n",
+      "\u001b[1;31mTypeError\u001b[0m: string indices must be integers, not 'str'"
      ]
     }
    ],
@@ -48,70 +61,387 @@
     "\n",
     "\n",
     "cur_phone = input('Phone Name: ')\n",
+    "ls = [\n",
+    "'Allview V4 Viper',\n",
+    "    'vivo iQOO 5 Pro 5G',\n",
+    "'vivo iQOO 7',\n",
+    "'vivo iQOO 7 (India)',\n",
+    "'vivo iQOO 8',\n",
+    "'vivo iQOO 8 Pro',\n",
+    "'vivo iQOO 9',\n",
+    "'vivo iQOO 9 (China)',\n",
+    "'vivo iQOO 9 Pro',\n",
+    "'vivo iQOO 9 SE',\n",
+    "'vivo iQOO 9T',\n",
+    "'vivo iQOO Neo',\n",
+    "'vivo iQOO Neo3 5G',\n",
+    "'vivo iQOO Neo5',\n",
+    "'vivo iQOO Neo5 Lite',\n",
+    "'vivo iQOO Neo5 S',\n",
+    "'vivo iQOO Neo5 SE',\n",
+    "'vivo iQOO Neo6 (China)',\n",
+    "'vivo iQOO Neo6 SE',\n",
+    "'vivo iQOO Neo7 (China)',\n",
+    "'vivo iQOO Neo7 Racing',\n",
+    "'vivo iQOO Neo7 SE',\n",
+    "'vivo iQOO Neo8',\n",
+    "'vivo iQOO Neo8 Pro',\n",
+    "'vivo iQOO Neo9',\n",
+    "'vivo iQOO Neo9 Pro',\n",
+    "'vivo iQOO Neo9 Pro (China)',\n",
+    "'vivo iQOO Neo 6',\n",
+    "'vivo iQOO Neo 7',\n",
+    "'vivo iQOO Neo 7 Pro',\n",
+    "'vivo iQOO Neo 855',\n",
+    "'vivo iQOO Neo 855 Racing',\n",
+    "'vivo iQOO Pro',\n",
+    "'vivo iQOO Pro 5G',\n",
+    "'vivo iQOO U1',\n",
+    "'vivo iQOO U1x',\n",
+    "'vivo iQOO U3',\n",
+    "'vivo iQOO U3x',\n",
+    "'vivo iQOO U3x Standard',\n",
+    "'vivo iQOO U5',\n",
+    "'vivo iQOO U5e',\n",
+    "'vivo iQOO U5x',\n",
+    "'vivo iQOO Z1',\n",
+    "'vivo iQOO Z1x',\n",
+    "'vivo iQOO Z3',\n",
+    "'vivo iQOO Z5',\n",
+    "'vivo iQOO Z5x',\n",
+    "'vivo iQOO Z6',\n",
+    "'vivo iQOO Z6 (China)',\n",
+    "'vivo iQOO Z6 44W',\n",
+    "'vivo iQOO Z6 Lite',\n",
+    "'vivo iQOO Z6 Pro',\n",
+    "'vivo iQOO Z6x',\n",
+    "'vivo iQOO Z7',\n",
+    "'vivo iQOO Z7 (China)',\n",
+    "'vivo iQOO Z7 Pro',\n",
+    "'vivo iQOO Z7i',\n",
+    "'vivo iQOO Z7s',\n",
+    "'vivo iQOO Z7x',\n",
+    "'vivo iQOO Z8 (China)',\n",
+    "'vivo iQOO Z8x',\n",
+    "'vivo NEX 3',\n",
+    "'vivo NEX 3 5G',\n",
+    "'vivo NEX 3S 5G',\n",
+    "'vivo S1',\n",
+    "'vivo S10',\n",
+    "'vivo S10 Pro',\n",
+    "'vivo S10e',\n",
+    "'vivo S12',\n",
+    "'vivo S12 Pro',\n",
+    "'vivo S15',\n",
+    "'vivo S15 Pro',\n",
+    "'vivo S15e',\n",
+    "'vivo S16',\n",
+    "'vivo S16 Pro',\n",
+    "'vivo S16e',\n",
+    "'vivo S17',\n",
+    "'vivo S17 Pro',\n",
+    "'vivo S17e',\n",
+    "'vivo S17t',\n",
+    "'vivo S18',\n",
+    "'vivo S18 Pro',\n",
+    "'vivo S18e',\n",
+    "'vivo S1 (China)',\n",
+    "'vivo S1 Prime',\n",
+    "'vivo S1 Pro',\n",
+    "'vivo S1 Pro (China)',\n",
+    "'vivo S5',\n",
+    "'vivo S6 5G',\n",
+    "'vivo S7',\n",
+    "'vivo S7e',\n",
+    "'vivo S7t',\n",
+    "'vivo S9',\n",
+    "'vivo S9e',\n",
+    "'vivo T1',\n",
+    "'vivo T1 (Snapdragon 680)',\n",
+    "'vivo T1 (Snapdragon 778G)',\n",
+    "'vivo T1 5G',\n",
+    "'vivo T1 Pro',\n",
+    "'vivo T1x',\n",
+    "'vivo T1x (India)',\n",
+    "'vivo T1x 4G',\n",
+    "'vivo T2',\n",
+    "'vivo T2 (China)',\n",
+    "'vivo T2 (India)',\n",
+    "'vivo T2 Pro',\n",
+    "'vivo T2x',\n",
+    "'vivo T2x (India)',\n",
+    "'vivo U10',\n",
+    "'vivo U20',\n",
+    "'vivo U3',\n",
+    "'vivo V15',\n",
+    "'vivo V15 Pro',\n",
+    "'vivo V17',\n",
+    "'vivo V17 (Russia)',\n",
+    "'vivo V17 Neo',\n",
+    "'vivo V17 Pro',\n",
+    "'vivo V19',\n",
+    "'vivo V19 (Indonesia)',\n",
+    "'vivo V19 Neo',\n",
+    "'vivo V20',\n",
+    "'vivo V20 2021',\n",
+    "'vivo V20 Pro',\n",
+    "'vivo V20 SE',\n",
+    "'vivo V21',\n",
+    "'vivo V21 5G',\n",
+    "'vivo V21e',\n",
+    "'vivo V21e 5G',\n",
+    "'vivo V21s',\n",
+    "'vivo V23 5G',\n",
+    "'vivo V23 Pro',\n",
+    "'vivo V23e',\n",
+    "'vivo V23e 5G',\n",
+    "'vivo V25',\n",
+    "'vivo V25 Pro',\n",
+    "'vivo V25e',\n",
+    "'vivo V27',\n",
+    "'vivo V27 Pro',\n",
+    "'vivo V27e',\n",
+    "'vivo V29',\n",
+    "'vivo V29 Lite',\n",
+    "'vivo V29 Pro',\n",
+    "'vivo V29e',\n",
+    "'vivo V29e (India)',\n",
+    "'vivo V30 Lite',\n",
+    "'vivo X100',\n",
+    "'vivo X100 Pro',\n",
+    "'vivo X27',\n",
+    "'vivo X27 Pro',\n",
+    "'vivo X30',\n",
+    "'vivo X30 Pro',\n",
+    "'vivo X50',\n",
+    "'vivo X50 5G',\n",
+    "'vivo X50 Lite',\n",
+    "'vivo X50 Pro+',\n",
+    "'vivo X50 Pro',\n",
+    "'vivo X50e',\n",
+    "'vivo X51 5G',\n",
+    "'vivo X60',\n",
+    "'vivo X60 (China)',\n",
+    "'vivo X60 Pro+',\n",
+    "'vivo X60 Pro',\n",
+    "'vivo X60 Pro (China)',\n",
+    "'vivo X60s',\n",
+    "'vivo X60t',\n",
+    "'vivo X60t Pro+',\n",
+    "'vivo X70',\n",
+    "'vivo X70 Pro+',\n",
+    "'vivo X70 Pro',\n",
+    "'vivo X80',\n",
+    "'vivo X80 Lite',\n",
+    "'vivo X80 Pro+',\n",
+    "'vivo X80 Pro',\n",
+    "'vivo X90',\n",
+    "'vivo X90 Pro+',\n",
+    "'vivo X90 Pro',\n",
+    "'vivo X90s',\n",
+    "'vivo X Flip',\n",
+    "'vivo X Fold+',\n",
+    "'vivo X Fold',\n",
+    "'vivo X Fold2',\n",
+    "'vivo X Note',\n",
+    "'vivo Y01',\n",
+    "'vivo Y02',\n",
+    "'vivo Y02A',\n",
+    "'vivo Y02s',\n",
+    "'vivo Y02t',\n",
+    "'vivo Y100',\n",
+    "'vivo Y100 (China)',\n",
+    "'vivo Y100 (IDN)',\n",
+    "'vivo Y100i',\n",
+    "'vivo Y11 (2019)',\n",
+    "'vivo Y11 (2023)',\n",
+    "'vivo Y11s',\n",
+    "'vivo Y12',\n",
+    "'vivo Y12a',\n",
+    "'vivo Y12i',\n",
+    "'vivo Y12s',\n",
+    "'vivo Y12s 2021',\n",
+    "'vivo Y15',\n",
+    "'vivo Y15a',\n",
+    "'vivo Y15s',\n",
+    "'vivo Y16',\n",
+    "'vivo Y17',\n",
+    "'vivo Y17s',\n",
+    "'vivo Y19',\n",
+    "'vivo Y1s',\n",
+    "'vivo Y20',\n",
+    "'vivo Y200',\n",
+    "'vivo Y20 2021',\n",
+    "'vivo Y20a',\n",
+    "'vivo Y20g',\n",
+    "'vivo Y20i',\n",
+    "'vivo Y20s',\n",
+    "'vivo Y20s [G]',\n",
+    "'vivo Y20t',\n",
+    "'vivo Y21',\n",
+    "'vivo Y21a',\n",
+    "'vivo Y21e',\n",
+    "'vivo Y21G',\n",
+    "'vivo Y21s',\n",
+    "'vivo Y21t',\n",
+    "'vivo Y21t (India)',\n",
+    "'vivo Y22',\n",
+    "'vivo Y22s',\n",
+    "'vivo Y27',\n",
+    "'vivo Y27 5G',\n",
+    "'vivo Y27s',\n",
+    "'vivo Y3',\n",
+    "'vivo Y30',\n",
+    "'vivo Y30 (China)',\n",
+    "'vivo Y30 5G',\n",
+    "'vivo Y30 Standard',\n",
+    "'vivo Y30g',\n",
+    "'vivo Y31',\n",
+    "'vivo Y31s',\n",
+    "'vivo Y32',\n",
+    "'vivo Y33',\n",
+    "'vivo Y33e',\n",
+    "'vivo Y33s',\n",
+    "'vivo Y33s 5G',\n",
+    "'vivo Y33t',\n",
+    "'vivo Y35+',\n",
+    "'vivo Y35',\n",
+    "'vivo Y35 5G',\n",
+    "'vivo Y36',\n",
+    "'vivo Y36 (India)',\n",
+    "'vivo Y36 5G',\n",
+    "'vivo Y36i',\n",
+    "'vivo Y3 (4GB+64GB)',\n",
+    "'vivo Y3 Standard',\n",
+    "'vivo Y3s',\n",
+    "'vivo Y3s (2021)',\n",
+    "'vivo Y50',\n",
+    "'vivo Y50t',\n",
+    "'vivo Y51 (2020, December)',\n",
+    "'vivo Y51 (2020, September)',\n",
+    "'vivo Y51a',\n",
+    "'vivo Y51s',\n",
+    "'vivo Y52 5G',\n",
+    "'vivo Y52s',\n",
+    "'vivo Y52s t1',\n",
+    "'vivo Y52t',\n",
+    "'vivo Y53s',\n",
+    "'vivo Y53s 4G',\n",
+    "'vivo Y54s',\n",
+    "'vivo Y55',\n",
+    "'vivo Y55 5G',\n",
+    "'vivo Y55s (2021)',\n",
+    "'vivo Y55s (2023)',\n",
+    "'vivo Y56',\n",
+    "'vivo Y5s',\n",
+    "'vivo Y70',\n",
+    "'vivo Y70s',\n",
+    "'vivo Y70t',\n",
+    "'vivo Y71t',\n",
+    "'vivo Y72 5G',\n",
+    "'vivo Y72 5G (India)',\n",
+    "'vivo Y72t',\n",
+    "'vivo Y73',\n",
+    "'vivo Y73s',\n",
+    "'vivo Y73t',\n",
+    "'vivo Y74s',\n",
+    "'vivo Y75',\n",
+    "'vivo Y75 5G',\n",
+    "'vivo Y75s',\n",
+    "'vivo Y76 5G',\n",
+    "'vivo Y76s',\n",
+    "'vivo Y77',\n",
+    "'vivo Y77 (China)',\n",
+    "'vivo Y77e',\n",
+    "'vivo Y77e (t1)',\n",
+    "'vivo Y77t',\n",
+    "'vivo Y78+',\n",
+    "'vivo Y78',\n",
+    "'vivo Y78 (China)',\n",
+    "'vivo Y78t',\n",
+    "'vivo Y89',\n",
+    "'vivo Y90',\n",
+    "'vivo Y91 (Mediatek)',\n",
+    "'vivo Y91i (India)',\n",
+    "'vivo Y9s',\n",
+    "'vivo Z1Pro',\n",
+    "'vivo Z1x',\n",
+    "'vivo Z3x',\n",
+    "'vivo Z5',\n",
+    "'vivo Z5i',\n",
+    "'vivo Z5x',\n",
+    "'vivo Z5x (2020)',\n",
+    "'vivo Z6 5G',]\n",
     "\n",
-    "# get only devices from the sitemap which is 2017-12-30T22:10:18+01:00 and newer using the lastmod tag\n",
+    "for cur_phone in ls:\n",
+    "    # get only devices from the sitemap which is 2017-12-30T22:10:18+01:00 and newer using the lastmod tag\n",
     "\n",
-    "print(\"Processing Lazada entries...\")\n",
+    "    print(\"Processing Lazada entries...\")\n",
     "\n",
-    "lazada = f\"https://www.lazada.com.ph/shop-mobiles/?ajax=true&q={quote(cur_phone)}&service=official\"\n",
-    "print(f\"URL: {lazada}\")\n",
+    "    lazada = f\"https://www.lazada.com.ph/shop-mobiles/?ajax=true&q={quote(cur_phone)}&service=official\"\n",
+    "    print(f\"URL: {lazada}\")\n",
     "\n",
-    "# some of the pages has broken json, so we need to repair it\n",
-    "json_laz = json_repair.loads(input(\"Lazada Json: \"))\n",
+    "    # some of the pages has broken json, so we need to repair it\n",
+    "    json_laz = json_repair.loads(input(\"Lazada Json: \"))\n",
     "\n",
-    "item = json_laz['mods']['listItems'][0]\n",
-    "data_out = None\n",
+    "    data_out = None\n",
     "\n",
-    "# check if file present\n",
-    "if not os.path.isfile('lazada_out.json'):\n",
-    "    with open('lazada_out.json', 'w') as file:\n",
-    "        json.dump({}, file)\n",
+    "    # check if file present\n",
+    "    if not os.path.isfile('lazada_out.json'):\n",
+    "        with open('lazada_out.json', 'w') as file:\n",
+    "            json.dump({}, file)\n",
     "\n",
-    "with open('lazada_out.json', 'r') as file:\n",
-    "    data_out = json_repair.loads(file.read())\n",
-    "if any([word.lower() in json_laz['mods']['listItems'][0]['name'].lower() for word in cur_phone.split()]):\n",
-    "    \n",
-    "    if item.get('price') is None:\n",
-    "        item['price'] = 'Unknown'\n",
-    "    if item.get('originalPrice') is None:\n",
-    "        item['originalPrice'] = item['price']\n",
-    "    if item.get('review') is None:\n",
-    "        item['review'] = 'Unknown'\n",
-    "    if item.get('ratingScore') is None:\n",
-    "        item['ratingScore'] = 'Unknown'\n",
-    "    if item.get('itemUrl') is None:\n",
-    "        item['itemUrl'] = 'Unknown'\n",
+    "    with open('lazada_out.json', 'r') as file:\n",
+    "        data_out = json_repair.loads(file.read())\n",
+    "\n",
+    "    if len(json_laz['mods']['listItems']):\n",
+    "        item = json_laz['mods']['listItems'][0]\n",
+    "        if all([word.lower() in json_laz['mods']['listItems'][0]['name'].lower() for word in cur_phone.split()]):\n",
+    "            if item.get('price') is None:\n",
+    "                item['price'] = 'Unknown'\n",
+    "            if item.get('originalPrice') is None:\n",
+    "                item['originalPrice'] = item['price']\n",
+    "            if item.get('review') is None:\n",
+    "                item['review'] = 'Unknown'\n",
+    "            if item.get('ratingScore') is None:\n",
+    "                item['ratingScore'] = 'Unknown'\n",
+    "            if item.get('itemUrl') is None:\n",
+    "                item['itemUrl'] = 'Unknown'\n",
     "\n",
     "\n",
-    "    if data_out is None:\n",
-    "        data_out =  {\n",
-    "            cur_phone : {\n",
-    "                'URL': item['itemUrl'], \n",
-    "                'Ratings': item['ratingScore'],\n",
-    "                'Reviews': item['review'],\n",
-    "                'Price': item['price'], \n",
-    "                'Original Price': item['originalPrice']\n",
-    "                }\n",
-    "            }\n",
-    "        \n",
+    "            if data_out is None:\n",
+    "                data_out =  {\n",
+    "                    cur_phone : {\n",
+    "                        'URL': item['itemUrl'], \n",
+    "                        'Ratings': item['ratingScore'],\n",
+    "                        'Reviews': item['review'],\n",
+    "                        'Price': item['price'], \n",
+    "                        'Original Price': item['originalPrice']\n",
+    "                        }\n",
+    "                    }\n",
+    "                \n",
+    "            else:\n",
+    "                data_out[cur_phone] = {\n",
+    "                    'URL': item['itemUrl'], \n",
+    "                    'Ratings': item['ratingScore'],\n",
+    "                    'Reviews': item['review'],\n",
+    "                    'Price': item['price'], \n",
+    "                    'Original Price': item['originalPrice']\n",
+    "                    }\n",
+    "\n",
+    "            print(f'[INFO]: Phone {cur_phone} in Lazada.')\n",
+    "        else:\n",
+    "            data_out[cur_phone] = {}\n",
+    "            print(f'[INFO]: Phone {cur_phone} not in Lazada.')\n",
+    "\n",
     "    else:\n",
-    "        data_out[cur_phone] = {\n",
-    "            'URL': item['itemUrl'], \n",
-    "            'Ratings': item['ratingScore'],\n",
-    "            'Reviews': item['review'],\n",
-    "            'Price': item['price'], \n",
-    "            'Original Price': item['originalPrice']\n",
-    "            }\n",
-    "\n",
-    "    print(f'[INFO]: Phone {cur_phone} in Lazada.')\n",
-    "else:\n",
-    "    data_out[cur_phone] = {}\n",
-    "    print(f'[INFO]: Phone {cur_phone} not in Lazada.')\n",
+    "        data_out[cur_phone] = {}\n",
+    "        print(f'[INFO]: Phone {cur_phone} not in Lazada.')\n",
     "\n",
     "\n",
     "\n",
-    "with open('lazada_out.json', 'w') as file:\n",
-    "    json.dump(data_out, file, indent=1)"
+    "    with open('lazada_out.json', 'w') as file:\n",
+    "        json.dump(data_out, file, indent=1)"
    ]
   }
  ],
