--- a/manual_lazada.ipynb
+++ b/manual_lazada.ipynb
@@ -65,7 +65,7 @@
     "\n",
     "print(\"Processing Lazada entries...\")\n",
     "\n",
-    "lazada = f\"https://www.lazada.com.ph/shop-mobiles/?ajax=true&q={quote(cur_phone)}&service=official\"\n",
+    "lazada = f\"https://www.lazada.com.ph/shop-mobiles/?ajax=true&q={quote(cur_phone)}\"\n",
     "print(f\"URL: {lazada}\")\n",
     "\n",
     "# some of the pages has broken json, so we need to repair it\n",
@@ -148,7 +148,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "0.0.0"
   }
  },
  "nbformat": 4,
