--- a/manual_lazada.ipynb
+++ b/manual_lazada.ipynb
@@ -806,18 +806,37 @@
      "output_type": "stream",
      "text": [
       "Processing Lazada entries...\n",
-      "URL: https://www.lazada.com.ph/shop-mobiles/?ajax=true&q=Xiaomi%2011%20Lite%205G%20NE\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "string indices must be integers, not 'str'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[5], line 30\u001b[0m\n\u001b[0;32m     27\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlazada_out.json\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m file:\n\u001b[0;32m     28\u001b[0m     data_out \u001b[38;5;241m=\u001b[39m json_repair\u001b[38;5;241m.\u001b[39mloads(file\u001b[38;5;241m.\u001b[39mread())\n\u001b[1;32m---> 30\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(json_laz[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmods\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlistItems\u001b[39m\u001b[38;5;124m'\u001b[39m]):\n\u001b[0;32m     31\u001b[0m     prev \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[0;32m     32\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m item \u001b[38;5;129;01min\u001b[39;00m json_laz[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmods\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlistItems\u001b[39m\u001b[38;5;124m'\u001b[39m][:\u001b[38;5;241m10\u001b[39m]:\n",
-      "\u001b[1;31mTypeError\u001b[0m: string indices must be integers, not 'str'"
+      "URL: https://www.lazada.com.ph/shop-mobiles/?ajax=true&q=Xiaomi%2011%20Lite%205G%20NE\n",
+      "[INFO]: Phone Xiaomi 11 Lite 5G NE not in Lazada.\n",
+      "[INFO]: Phone Xiaomi 11 Lite 5G NE not in Lazada.\n",
+      "[INFO]: Phone Xiaomi 11 Lite 5G NE not in Lazada.\n",
+      "[INFO]: Phone Xiaomi 11 Lite 5G NE in Lazada.\n",
+      "Processing Lazada entries...\n",
+      "URL: https://www.lazada.com.ph/shop-mobiles/?ajax=true&q=Xiaomi%2011i\n",
+      "[INFO]: Phone Xiaomi 11i not in Lazada.\n",
+      "[INFO]: Phone Xiaomi 11i not in Lazada.\n",
+      "[INFO]: Phone Xiaomi 11i not in Lazada.\n",
+      "[INFO]: Phone Xiaomi 11i not in Lazada.\n",
+      "[INFO]: Phone Xiaomi 11i not in Lazada.\n",
+      "[INFO]: Phone Xiaomi 11i not in Lazada.\n",
+      "[INFO]: Phone Xiaomi 11i not in Lazada.\n",
+      "[INFO]: Phone Xiaomi 11i not in Lazada.\n",
+      "[INFO]: Phone Xiaomi 11i not in Lazada.\n",
+      "[INFO]: Phone Xiaomi 11i not in Lazada.\n",
+      "Processing Lazada entries...\n",
+      "URL: https://www.lazada.com.ph/shop-mobiles/?ajax=true&q=Xiaomi%2011i%20HyperCharge%205G\n",
+      "[INFO]: Phone Xiaomi 11i HyperCharge 5G not in Lazada.\n",
+      "[INFO]: Phone Xiaomi 11i HyperCharge 5G not in Lazada.\n",
+      "[INFO]: Phone Xiaomi 11i HyperCharge 5G not in Lazada.\n",
+      "[INFO]: Phone Xiaomi 11i HyperCharge 5G not in Lazada.\n",
+      "[INFO]: Phone Xiaomi 11i HyperCharge 5G not in Lazada.\n",
+      "[INFO]: Phone Xiaomi 11i HyperCharge 5G not in Lazada.\n",
+      "[INFO]: Phone Xiaomi 11i HyperCharge 5G not in Lazada.\n",
+      "[INFO]: Phone Xiaomi 11i HyperCharge 5G not in Lazada.\n",
+      "[INFO]: Phone Xiaomi 11i HyperCharge 5G not in Lazada.\n",
+      "[INFO]: Phone Xiaomi 11i HyperCharge 5G not in Lazada.\n",
+      "Processing Lazada entries...\n",
+      "URL: https://www.lazada.com.ph/shop-mobiles/?ajax=true&q=Xiaomi%2011T\n"
      ]
     }
    ],
@@ -855,8 +874,9 @@
     "        prev = None\n",
     "        for item in json_laz['mods']['listItems'][:10]:\n",
     "            prev = item\n",
+    "            import re\n",
     "\n",
-    "            if all([word.lower() in json_laz['mods']['listItems'][0]['name'].lower() for word in cur_phone.split()]):\n",
+    "            if all([word.lower() in item['name'].lower() for word in cur_phone.split(maxsplit=1)]):\n",
     "                if item.get('price') is None:\n",
     "                    continue\n",
     "                    item['price'] = 'Unknown'\n",
@@ -895,6 +915,7 @@
     "                        }\n",
     "\n",
     "                print(f'[INFO]: Phone {cur_phone} in Lazada.')\n",
+    "                break\n",
     "            else:\n",
     "                data_out[cur_phone] = {}\n",
     "                print(f'[INFO]: Phone {cur_phone} not in Lazada.')\n",
