--- a/manual_lazada.ipynb
+++ b/manual_lazada.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2899,7 +2899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -2907,18 +2907,7 @@
      "output_type": "stream",
      "text": [
       "Processing Lazada entries...\n",
-      "URL: https://www.lazada.com.ph/shop-mobiles/?ajax=true&q=Xiaomi%20Redmi%20K60E%0A\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "string indices must be integers, not 'str'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[11], line 30\u001b[0m\n\u001b[0;32m     27\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlazada_out.json\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m file:\n\u001b[0;32m     28\u001b[0m     data_out \u001b[38;5;241m=\u001b[39m json_repair\u001b[38;5;241m.\u001b[39mloads(file\u001b[38;5;241m.\u001b[39mread())\n\u001b[1;32m---> 30\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(json_laz[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmods\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlistItems\u001b[39m\u001b[38;5;124m'\u001b[39m]):\n\u001b[0;32m     31\u001b[0m     prev \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[0;32m     32\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m item \u001b[38;5;129;01min\u001b[39;00m json_laz[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmods\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlistItems\u001b[39m\u001b[38;5;124m'\u001b[39m][:\u001b[38;5;241m10\u001b[39m]:\n",
-      "\u001b[1;31mTypeError\u001b[0m: string indices must be integers, not 'str'"
+      "URL: https://www.lazada.com.ph/shop-mobiles/?ajax=true&q=Xiaomi%20Redmi%20K60E\n"
      ]
     }
    ],
@@ -2954,7 +2943,7 @@
     "\n",
     "    if len(json_laz['mods']['listItems']):\n",
     "        prev = None\n",
-    "        for item in json_laz['mods']['listItems'][:10]:\n",
+    "        for item in json_laz['mods']['listItems'][:15]:\n",
     "            prev = item\n",
     "            import re\n",
     "\n",
