--- a/manual_lazada.ipynb
+++ b/manual_lazada.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 228,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2894,12 +2894,13 @@
     "n = 5\n",
     "ll = [ll[i * len(ll) // n: (i + 1) * len(ll) // n] for i in range(n)]\n",
     "\n",
-    "ll = ll[int(input('Enter the part number (1-5): '))-1]\n"
+    "# ll = ll[int(input('Enter the part number (1-5): '))-1][70:]\n",
+    "ll = ll[0][13:]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 253,
    "metadata": {},
    "outputs": [
     {
@@ -2907,7 +2908,8 @@
      "output_type": "stream",
      "text": [
       "Processing Lazada entries...\n",
-      "URL: https://www.lazada.com.ph/shop-mobiles/?ajax=true&q=Xiaomi%20Redmi%20K60E\n"
+      "URL: https://www.lazada.com.ph/shop-mobiles/?ajax=true&q=Realme%20X7%20Pro\n",
+      "[INFO]: Phone Realme X7 Pro in Lazada.\n"
      ]
     }
    ],
@@ -2915,91 +2917,122 @@
     "from json_repair import json_repair\n",
     "import json, os\n",
     "from urllib.parse import quote\n",
+    "import re\n",
     "\n",
     "\n",
     "# cur_phone = input('Phone Name: ')\n",
     "\n",
+    "null_phone =[\n",
+    "    'tempered',\n",
+    "    'case',\n",
+    "    'protector',\n",
+    "    'cover',\n",
+    "    'frame',\n",
+    "    'replacement'\n",
+    "]\n",
+    "import subprocess\n",
     "\n",
+    "def copy2clip(txt):\n",
+    "    subprocess.run(\"clip\", text=True, input=txt.strip())\n",
+    "\n",
+    "'''\n",
     "for cur_phone in ll:\n",
-    "    # get only devices from the sitemap which is 2017-12-30T22:10:18+01:00 and newer using the lastmod tag\n",
+    "'''\n",
     "\n",
-    "    print(\"Processing Lazada entries...\")\n",
+    "cur_phone = input('Phone Name: ')\n",
     "\n",
-    "    lazada = f\"https://www.lazada.com.ph/shop-mobiles/?ajax=true&q={quote(cur_phone)}\"\n",
-    "    print(f\"URL: {lazada}\")\n",
+    "print(\"Processing Lazada entries...\")\n",
     "\n",
-    "    # some of the pages has broken json, so we need to repair it\n",
-    "    json_laz = json_repair.loads(input(\"Lazada Json: \"))\n",
+    "# lazada = f\"https://www.lazada.com.ph/shop-mobiles/{cur_phone.split(maxsplit=1)[0]}/?ajax=true&q={quote(cur_phone)}\"\n",
+    "lazada = f\"https://www.lazada.com.ph/shop-mobiles/?ajax=true&q={quote(cur_phone)}\"\n",
+    "print(f\"URL: {lazada}\")\n",
     "\n",
-    "    data_out = None\n",
+    "#save the link to the clipboard\n",
+    "copy2clip(lazada)\n",
     "\n",
-    "    # check if file present\n",
-    "    if not os.path.isfile('lazada_out.json'):\n",
-    "        with open('lazada_out.json', 'w') as file:\n",
-    "            json.dump({}, file)\n",
+    "# some of the pages has broken json, so we need to repair it\n",
+    "json_laz = json_repair.loads(input(f\"Lazada Json {cur_phone}: \"))\n",
     "\n",
-    "    with open('lazada_out.json', 'r') as file:\n",
-    "        data_out = json_repair.loads(file.read())\n",
+    "data_out = None\n",
     "\n",
-    "    if len(json_laz['mods']['listItems']):\n",
-    "        prev = None\n",
-    "        for item in json_laz['mods']['listItems'][:15]:\n",
-    "            prev = item\n",
-    "            import re\n",
+    "# check if file present\n",
+    "if not os.path.isfile('lazada_out.json'):\n",
+    "    with open('lazada_out.json', 'w') as file:\n",
+    "        json.dump({}, file)\n",
     "\n",
-    "            if all([word.lower() in item['name'].lower() for word in cur_phone.split(maxsplit=1)]):\n",
-    "                if item.get('price') is None:\n",
-    "                    continue\n",
-    "                    item['price'] = 'Unknown'\n",
-    "                if item.get('originalPrice') is None:\n",
-    "                    continue\n",
-    "                    item['originalPrice'] = item['price']\n",
-    "                if item.get('review') is None:\n",
-    "                    continue\n",
-    "                    item['review'] = 'Unknown'\n",
-    "                if item.get('ratingScore') is None:\n",
-    "                    continue\n",
-    "                    item['ratingScore'] = 'Unknown'\n",
-    "                if item.get('itemUrl') is None:\n",
-    "                    continue\n",
-    "                    item['itemUrl'] = 'Unknown'\n",
+    "with open('lazada_out.json', 'r') as file:\n",
+    "    data_out = json_repair.loads(file.read())\n",
+    "\n",
+    "if len(json_laz['mods']['listItems']):\n",
+    "    prev = None\n",
+    "    for item in json_laz['mods']['listItems'][:25]:\n",
+    "        prev = item\n",
+    "\n",
+    "        if (all([word.lower() in item['name'].lower() for word in json_laz['mods']['resultTips']['keywords'][0]['text'].split(maxsplit=1)]) and\n",
+    "            all([word.lower() not in item['name'].lower() for word in null_phone])):\n",
+    "            if item.get('price') is None:\n",
+    "                continue\n",
+    "                item['price'] = 'Unknown'\n",
+    "            if item.get('originalPrice') is None:\n",
+    "                # continue\n",
+    "                item['originalPrice'] = item['price']\n",
+    "            if item.get('review') is None:\n",
+    "                continue\n",
+    "                item['review'] = 'Unknown'\n",
+    "            if item.get('ratingScore') is None:\n",
+    "                continue\n",
+    "                item['ratingScore'] = 'Unknown'\n",
+    "            if item.get('itemUrl') is None:\n",
+    "                continue\n",
+    "                item['itemUrl'] = 'Unknown'\n",
+    "\n",
+    "            if float(item['price']) < 1000:\n",
+    "                # smartphone accessories case\n",
+    "                continue\n",
     "\n",
     "\n",
-    "                if data_out is None:\n",
-    "                    data_out =  {\n",
-    "                        cur_phone : {\n",
-    "                            'URL': item['itemUrl'], \n",
-    "                            'Ratings': item['ratingScore'],\n",
-    "                            'Reviews': item['review'],\n",
-    "                            'Price': item['price'], \n",
-    "                            'Original Price': item['originalPrice']\n",
-    "                            }\n",
-    "                        }\n",
-    "                    \n",
-    "                else:\n",
-    "                    data_out[cur_phone] = {\n",
+    "            if data_out is None:\n",
+    "                data_out =  {\n",
+    "                    cur_phone : {\n",
     "                        'URL': item['itemUrl'], \n",
     "                        'Ratings': item['ratingScore'],\n",
     "                        'Reviews': item['review'],\n",
     "                        'Price': item['price'], \n",
     "                        'Original Price': item['originalPrice']\n",
     "                        }\n",
-    "\n",
-    "                print(f'[INFO]: Phone {cur_phone} in Lazada.')\n",
-    "                break\n",
+    "                    }\n",
+    "                \n",
     "            else:\n",
-    "                data_out[cur_phone] = {}\n",
-    "                print(f'[INFO]: Phone {cur_phone} not in Lazada.')\n",
+    "                data_out[cur_phone] = {\n",
+    "                    'URL': item['itemUrl'], \n",
+    "                    'Ratings': item['ratingScore'],\n",
+    "                    'Reviews': item['review'],\n",
+    "                    'Price': item['price'], \n",
+    "                    'Original Price': item['originalPrice']\n",
+    "                    }\n",
     "\n",
-    "    else:\n",
-    "        data_out[cur_phone] = {}\n",
-    "        print(f'[INFO]: Phone {cur_phone} not in Lazada.')\n",
+    "            print(f'[INFO]: Phone {cur_phone} in Lazada.')\n",
+    "            break\n",
+    "        else:\n",
+    "            data_out[cur_phone] = {}\n",
+    "            print(f'[INFO]: Phone {cur_phone} not in Lazada.')\n",
+    "\n",
+    "else:\n",
+    "    data_out[cur_phone] = {}\n",
+    "    print(f'[INFO]: Phone {cur_phone} not in Lazada.')\n",
     "\n",
     "\n",
     "\n",
-    "    with open('lazada_out.json', 'w') as file:\n",
-    "        json.dump(data_out, file, indent=1)"
+    "with open('lazada_out.json', 'w') as file:\n",
+    "    json.dump(data_out, file, indent=1, sort_keys=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
