v.0.1.2 - Tanginang natapos din

--- a/manual_lazada.ipynb
+++ b/manual_lazada.ipynb
@@ -2900,7 +2900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 478,
    "metadata": {},
    "outputs": [
     {
@@ -2908,8 +2908,10 @@
      "output_type": "stream",
      "text": [
       "Processing Lazada entries...\n",
-      "URL: https://www.lazada.com.ph/shop-mobiles/?ajax=true&q=Realme%20X7%20Pro\n",
-      "[INFO]: Phone Realme X7 Pro in Lazada.\n"
+      "URL: https://www.lazada.com.ph/shop-mobiles/?ajax=true&q=Huawei%20nova%205i\n",
+      "[INFO]: Phone Huawei nova 5i not in Lazada.\n",
+      "[INFO]: Phone Huawei nova 5i not in Lazada.\n",
+      "[INFO]: Phone Huawei nova 5i in Lazada.\n"
      ]
     }
    ],
@@ -2928,7 +2930,8 @@
     "    'protector',\n",
     "    'cover',\n",
     "    'frame',\n",
-    "    'replacement'\n",
+    "    'replacement',\n",
+    "    'battery'\n",
     "]\n",
     "import subprocess\n",
     "\n",
@@ -3026,6 +3029,13 @@
     "with open('lazada_out.json', 'w') as file:\n",
     "    json.dump(data_out, file, indent=1, sort_keys=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
